POM and README updates. Also removed MACH components until next release.

--- a/host-ping-alert/src/main/config/host-ping-alert.properties
+++ b/host-ping-alert/src/main/config/host-ping-alert.properties
@@ -48,15 +48,14 @@ log4jProperties=config/log4j.properties
 hosts=localhost,127.0.0.1 
 
 # Comma delimited list of URLs to check for pagePattern below
-pages=http://HOST/sadisplay/nicslogin.seam
+pages=http://google.com
 
 # A JAVA regex pattern used to match content in the response from the URLS.  Currently you can only
 # specify one pattern for all URLs, unfortunately.  Currently NICS-centric.
 #
-pagePattern=Please login below
+pagePattern=I'm feeling lucky
 
-# TODO: remove &amp; stuff, should be fine as is in a properties file
-emailConsumer=rabbitmq://localhost:5672?amqExchange=amq.topic&amqExchangeType=topic&requestedHeartbeat=0&routingKey=LDDRS.alert.email&noAck=false&user=guest&password=guest&msgPersistent=false&msgContentType=text
+emailConsumer=rabbitmq://localhost:5672/iweb.amq.topic?exchangeType=topic&routingKey=NICS.alert.email&autoAck=false&username=guest&password=guest
 
 # Comma delimited list of email addresses to send alerts to
 subscribers=
