--- a/host-ping-alert/pom.xml
+++ b/host-ping-alert/pom.xml
@@ -96,11 +96,6 @@
 				</configuration>
 			</plugin>
 
-			<!-- Allows the example to be run via 'mvn compile exec:java' - <plugin> 
-				<groupId>org.codehaus.mojo</groupId> <artifactId>exec-maven-plugin</artifactId> 
-				<configuration> <mainClass>edu.mit.ll.nics.mach.ping.SomeClass</mainClass> 
-				<includePluginDependencies>false</includePluginDependencies> </configuration> 
-				</plugin> -->
 		</plugins>
 	</build>
 
@@ -128,6 +123,10 @@
 			<artifactId>camel-stream</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.camel</groupId>
+            <artifactId>camel-rabbitmq</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 		</dependency>
@@ -139,16 +138,7 @@
 		<!-- MITLL dependencies -->
 		<dependency>
 			<groupId>edu.mit.ll.nics.common</groupId>
-			<artifactId>RabbitMQCamelComponent</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>edu.mit.ll.nics.common</groupId>
 			<artifactId>email-alert</artifactId>
-		</dependency>
-		<!-- NICS internal module dependencies -->
-		<dependency>
-			<groupId>edu.mit.ll.nics.monitoring</groupId>
-			<artifactId>mach-agent</artifactId>
 		</dependency>
 	</dependencies>
 </project>
